# boilerplate_axum_project

./: Cargo.toml
src/: app.rs  main.rs
src/app/: country.rs  login.rs  model.rs  protected.rs
