[package]
name = "boilerplate_axum_project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
